@@ -1,3 +1,7 @@
+* Jan 2 2001 hship
+
+Minor corrections to some tutorial code.
+
 * Dec 29 2000 hship
 
 Extensive changes related to the Savage Refactoring of Tapestry.
